# ChangeLog for dev-java/commons-digester
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-digester/ChangeLog,v 1.38 2006/12/09 09:11:06 flameeyes Exp $

  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  commons-digester-1.7-r2.ebuild:
  Add ~x86-fbsd keyword.

  03 Dec 2006; Markus Rothe <corsair@gentoo.org>
  commons-digester-1.7-r2.ebuild:
  Stable on ppc64

  28 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  -commons-digester-1.7.ebuild, -commons-digester-1.7-r1.ebuild:
  Dropped earlier revision with equivilant keywords.

  28 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  commons-digester-1.7-r2.ebuild:
  Stabilized on amd64 (see bug #155622).

  23 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  commons-digester-1.7-r2.ebuild:
  stable x86, bug #155622

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  commons-digester-1.6-r1.ebuild, commons-digester-1.7.ebuild,
  commons-digester-1.7-r1.ebuild, commons-digester-1.7-r2.ebuild:
  Dropping sparc keywords, see #96229

*commons-digester-1.7-r2 (10 Sep 2006)

  10 Sep 2006; Vlastimil Babka <caster@gentoo.org>
  +commons-digester-1.7-r2.ebuild:
  Replaced junit USE flag with test, which is done in src_test(). Added
  examples USE flag.

*commons-digester-1.7-r1 (22 Jul 2006)

  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +commons-digester-1.7-r1.ebuild:
  Migrated to Generation 2.

*commons-digester-1.7 (09 Jan 2006)

  09 Jan 2006; Joshua Nichols <nichoj@gentoo.org>
  +files/1.7-build.xml-jar-target.patch, +commons-digester-1.7.ebuild:
  Version bump (bug #117698).

  05 Jan 2006; Petteri Räty <betelgeuse@gentoo.org>
  commons-digester-1.6-r1.ebuild:
  Corrected license to Apache-2.0.

  05 Nov 2005; Petteri Räty <betelgeuse@gentoo.org>
  commons-digester-1.6-r1.ebuild:
  Fixed homepage reported in bug #111534.

  10 Jul 2005; Thomas Matthijs <axxo@gentoo.org>
  commons-digester-1.6-r1.ebuild:
  fix deps, cleanup
