@@ -1,0 +1,3 @@
+MD5 1bdc6d353a28c1944a4699c8b1cce065 commons-digester-1.6-src.tar.gz 251103
+RMD160 2246cbe276c4db7e4f5d25ea1d2b75071d5a14ad commons-digester-1.6-src.tar.gz 251103
+SHA256 5bf82ffc59496a4553c891589d4b52f8dfecbcbb7ab0cd4705867203a3464452 commons-digester-1.6-src.tar.gz 251103
