@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/commons-digester
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-digester/ChangeLog,v 1.38 2006/12/09 09:11:06 flameeyes Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-digester/ChangeLog,v 1.39 2007/03/07 04:38:03 wltjr Exp $
+
+*commons-digester-1.6-r2 (07 Mar 2007)
+
+  07 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org>
+  +commons-digester-1.6-r2.ebuild:
+  Migrated to gen 2
 
   09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
   commons-digester-1.7-r2.ebuild:
